# d2esrdb.github.io

./: .gitignore  README.md  d2esrdb.yml  es3armo_n.htm  es3cube_n.htm  es3gem_n.htm  es3gemw_n.htm  es3map_n.htm  es3pref_n.htm  es3runew_n.htm  es3set_n.htm  es3suff_n.htm  es3uarmo_n.htm  es3uother_n.htm  es3uweap_n.htm  es3weap_n.htm  index.htm  index.html  pyproject.toml
ESE/: MonPreset.txt  Runes.txt  Sets.txt  armors.htm  eclipse.htm  gems.htm  gemwords.htm  hireling.txt  index.htm  maps.htm  newstuff.htm  npc.txt  prefixes.htm  recipes.htm  runewords.htm  sets.htm  suffixes.htm  temp_rows.txt  unique_armors.htm  unique_others.htm  unique_weapons.htm  weapons.htm
ESR/: Armor.txt  D2KillCounter.txt  PetType.txt  SkillDesc.txt  Skills.txt  States.txt  UniqueItems.txt  armors.htm  es3armo_n.htm  es3cube_n.htm  es3gem_n.htm  es3gemw_n.htm  es3map_n.htm  es3pref_n.htm  es3runew_n.htm  es3set_n.htm  es3suff_n.htm  es3uarmo_n.htm  es3uother_n.htm  es3uweap_n.htm  es3weap_n.htm  gems.htm  gemwords.htm  index.htm  maps.htm  prefixes.htm  recipes.htm  runewords.htm  sets.htm  suffixes.htm  top.htm  unique_armors.htm  unique_others.htm  unique_weapons.htm  weapons.htm
ESR_5.3A3/: D2ESR Online.reg  D2ESRutils.ini  D2Mod.ini  D2SE_SETUP.ini  PlugY.ini  d2dx.cfg  gamble.d2h  gamblefilter.lst  patchnotes.txt
Eastern_Sun_Eclipse/: ItemStatCost-PreBitChanges.txt  MonLvl.txt  PetType.txt  SetItems.txt  UniqueItems.txt  armors.htm  cubemain.txt  eclipse.htm  gems.htm  gemwords.htm  maps.htm  newstuff.htm  prefixes.htm  recipes.htm  runewords.htm  sets.htm  states.txt  styles.css  suffixes.htm  unique_armors.htm  unique_others.htm  unique_weapons.htm  weapons.htm
Eastern_Sun_Resurrected/: armor.txt  armors.htm  gems.htm  levels.txt  maps.htm  monequip.txt  monsounds.txt  monstats.txt  pettype.txt  prefixes.htm  recipes.htm  runes.txt  runewords.htm  sets.htm  sets.txt  skilldesc.txt  states.txt  suffixes.htm  top.htm  unique_armors.htm  unique_others.htm  unique_weapons.htm  uniqueitems.txt  weapons.htm
Eastern_Sun_Rises/: Levels.txt  LvlMaze.txt  MonSounds.txt  TreasureClassEx.txt  Weapons.txt  _bufficons.txt  armors.htm  gems.htm  gemwords.htm  hiredesc.txt  maps.htm  prefixes.htm  recipes.htm  runewords.htm  sets.htm  suffixes.htm  top.htm  unique_armors.htm  unique_others.htm  unique_weapons.htm  weapons.htm
LOD/: armors.htm  gems.htm  prefixes.htm  recipes.htm  runewords.htm  sets.htm  suffixes.htm  unique_armors.htm  unique_others.htm  unique_weapons.htm  weapons.htm
Lord_Of_Destruction/: armors.htm  cube.htm  gems.htm  prefixes.htm  recipes.htm  runewords.htm  sets.htm  suffixes.htm  unique_armors.htm  unique_others.htm  unique_weapons.htm  weapons.htm
(+338 files in other folders)
