[project]
name = "d2esrdb-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mako>=1.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_gen"]

[project.scripts]
db-gen = "db_gen.db_gen:main"

[tool.uv]
dev-dependencies = [
    "infer-types>=1.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
